[versioneer]
VCS = git
style = pep440
versionfile_source = pynets/_version.py
versionfile_build = pynets/_version.py
tag_prefix =
parentdir_prefix =

[bdist_wheel]
universal = 1

[aliases]
test = pytest
# Define setup.py command aliases here

[metadata]
description-file = README.md

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx >=1.5.3
    numpydoc>=0.8.0
    sphinx-argparse
    sphinx_rtd_theme
